Fix schedule grid time label alignment

--- a/project/style/scheduling.css
+++ b/project/style/scheduling.css
@@ -191,8 +191,10 @@
 .time-slot {
   height: 45px;
   min-height: 45px;
+  box-sizing: border-box;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  padding-top: 2px;
   justify-content: center;
   font-size: 11px;
   color: #7a6a4a;
@@ -225,7 +227,7 @@
 
 .day-slots {
   position: relative;
-  height: 675px;
+  height: 765px;
   background: repeating-linear-gradient(
     to bottom,
     transparent,
